--- a/index.html
+++ b/index.html
@@ -6,14 +6,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./public/css/app.min.css">
+    <link rel="stylesheet" href="./public/css/app.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top display-flex justify-content-around">
             <div class="container">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">
+                    <img src="./public/img/logo-horizontal-fond-noir-couleur.png" width="200" height="60" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto ">
+                        <li class="nav-item active">
+                            <img src="./public/img/home-icon.png" alt="">
+                            <a class="nav-link" href="#">Home
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item active">
+                            <img src="./public/img/packages-icon.png" alt="">
+                            <a class="nav-link" href="#">PACKAGES</a>
+                        </li>
+                        <li class="nav-item active">
+                            <img src="./public/img/outils-icon.png" alt="">
+                            <a class="nav-link" href="#">OUTILS</a>
+                        </li>
+                        <li class="nav-item active">
+                            <img src="./public/img/projets-icon.png" alt="">
+                            <a class="nav-link" href="#">PROJETS</a>
+                        </li>
+                        <li class="nav-item active">
+                            <img src="./public/img/temoignages-icon.png" alt="">
+                            <a class="nav-link" href="#">TEMOIGNAGES</a>
+                        </li>
+                        <li class="nav-item active">
+                            <img src="./public/img/contact-icon.png" alt="">
+                            <a class="nav-link" href="#">CONTACTS</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
