--- a/index.html
+++ b/index.html
@@ -10,50 +10,231 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top display-flex justify-content-around">
-            <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img src="./public/img/logo-horizontal-fond-noir-couleur.png" width="200" height="60" alt="">
+    <div class="container d-flex justify-content-around align-items-center  text-white  p-0">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark   static-top ">
+                <a class="navbar-bran pr-5 " href="#">
+                    <img class="h-50 w-50" src="./public/img/logo-horizontal-fond-noir-couleur.png" width="200"
+                        height="50" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto ">
-                        <li class="nav-item active">
-                            <img src="./public/img/home-icon.png" alt="">
+                <div class="collapse navbar-collaps d-flex align-items-center  justify-content-center"
+                    id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto menu">
+                        <li class="nav-item active pl-3 ">
+                            <img class="h-30 " src="./public/img/home-icon.png" alt="">
                             <a class="nav-link" href="#">Home
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
-                        <li class="nav-item active">
-                            <img src="./public/img/packages-icon.png" alt="">
+                        <li class="nav-item active   pl-3">
+                            <img class="h-30" src="./public/img/packages-icon.png" alt="">
                             <a class="nav-link" href="#">PACKAGES</a>
                         </li>
-                        <li class="nav-item active">
-                            <img src="./public/img/outils-icon.png" alt="">
+                        <li class="nav-item active pl-3">
+                            <img class="h-30 " src="./public/img/outils-icon.png" alt="">
                             <a class="nav-link" href="#">OUTILS</a>
                         </li>
-                        <li class="nav-item active">
-                            <img src="./public/img/projets-icon.png" alt="">
+                        <li class="nav-item active  pl-3">
+                            <img class="h-30 " src="./public/img/projets-icon.png" alt="">
                             <a class="nav-link" href="#">PROJETS</a>
                         </li>
-                        <li class="nav-item active">
-                            <img src="./public/img/temoignages-icon.png" alt="">
+                        <li class="nav-item active  ">
+                            <img class="h-30 " src="./public/img/temoignages-icon.png" alt="">
                             <a class="nav-link" href="#">TEMOIGNAGES</a>
                         </li>
-                        <li class="nav-item active">
-                            <img src="./public/img/contact-icon.png" alt="">
+                        <li class="nav-item active ">
+                            <img class="h-30 " src="./public/img/contact-icon.png" alt="">
                             <a class="nav-link" href="#">CONTACTS</a>
                         </li>
                     </ul>
                 </div>
+            </nav>
+        </header>
+    </div>
+    <main>
+        <section>
+            <div class="container  p-0 pt-4 pl-5 pb-4  text-white eclosion ">
+                <div class="row">
+                    <div class="col-6 pl-4">
+                        <img src="./public/img/packages.png" alt="">
+                    </div>
+                    <div class="col-6 ">
+                        <h1 class="text ">A chaque étape son pack</h1>
+                        <p>naître, grandir et prospérer.</p>
+                    </div>
+                </div>
             </div>
-        </nav>
-    </header>
-
+        </section>
+        <section>
+            <div class="container texte1 pt-4">
+                <div class="col  pl-4 eclosion-text  w-25">
+                    <h1>Eclosion</h1>
+                </div>
+                <div class="row">
+                    <div class="col-6 pt-5 pl-5 ">
+                        <img src="./public/img/icon-eclosion.png" alt="">
+                    </div>
+                    <div class="col-6">
+                        <div class="col-6 pt-5 ">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicingendis eum! Repellendus, enim impedit,
+                                cumque deserunt earum sunt veritatis, voluptatibus illum ab repellat fugiat eaque.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container pt-5 logo">
+                <div class="row">
+                    <div class="col-3  ">
+                        <img class="w-75 pl-5"  src="./public/img/Logo-logo.png" alt="">
+                        <p  class=" pt-3 pl-5">Logo</p>
+                    </div>
+                    <div class="col-3">
+                        <img class="w-75 pl-5" src="./public/img/icon-charte-graphic.png" alt="">
+                        <p class=" pt-3 pl-4">Charte graphique</p>
+                    </div>
+                    <div class="col-3 pl-5">
+                        <img class="w-75 pl-4" src="./public/img/site-single-page.png" alt="">
+                        <p class=" pt-3 pl-1">Site single page</p>
+                    </div>
+                    <div class="col-3">
+                        <img class="w-75 pl-5" src="./public/img/carte-visite.png" alt="">
+                        <p class=" pt-3 pl-5">Carte de visite</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container texte1  pt-4">
+                <div class="col  pl-4 evolution-text ">
+                    <h1>Evolution</h1>
+                </div>
+                <div class="row">
+                    <div class="col-6 pt-5 pl-5 ">
+                        <img src="./public/img/icon-evolution.png" alt="">
+                    </div>
+                    <div class="col-6">
+                        <div class="col-6 pt-5 ">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicingendis eum! Repellendus, enim impedit,
+                                cumque deserunt earum sunt veritatis, voluptatibus illum ab repellat fugiat eaque.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container logo p-5">
+                <div class="row">
+                    <div class="col-3">
+                        <img width="65%" src="./public/img/Logo-logo.png" alt="">
+                        <p class=" pt-2 pl-3">Logo</p>
+                    </div>
+                    <div class="col-3">
+                        <img width="65%" src="./public/img/icon-charte-graphic.png" alt="">
+                        <p class="pt-2 pl-2">Charte graphique</p>
+                    </div>
+                    <div class="col-3">
+                        <img width="65%" src="./public/img/site-single-page.png" alt="">
+                        <p class="pt-2 pl-1">Site single page</p>
+                    </div>
+                    <div class="col-3">
+                        <img width="65%" src="./public/img/carte-visite.png" alt="">
+                        <p class="pt-2 pl-3">Carte de visite</p>
+                    </div>
+                </div>
+                <div class="col d-flex justify-content-center align-items-center flex-column ">
+                    <img width="15%" src="./public/img/reseaux-sociaux.png" alt="">
+                    <p class="pt-2 pl-3">Réseaux sociaux</p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container texte1  pt-4">
+                <div class="col  pl-4 envol-text " width="">
+                    <h1>Envol</h1>
+                </div>
+                <div class="row">
+                    <div class="col-6 pt-5 pl-5 ">
+                        <img src="./public/img/icon-envole.png" alt="">
+                    </div>
+                    <div class="col-6">
+                        <div class="col-6 pt-5 ">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicingendis eum! Repellendus, enim impedit,
+                                cumque deserunt earum sunt veritatis, voluptatibus illum ab repellat fugiat eaque.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container logo p-5">
+                <div class="row">
+                    <div class="col-3 ">
+                        <img width="65%" src="./public/img/Logo-logo.png" alt="">
+                        <p class="pt-2 pl-3">Logo</p>
+                    </div>
+                    <div class="col-3">
+                        <img width="65%" src="./public/img/icon-charte-graphic.png" alt="">
+                        <p class="pt-2 pl-2">Charte graphique</p>
+                    </div>
+                    <div class="col-3">
+                        <img width="65%" src="./public/img/site-single-page.png" alt="">
+                        <p class="pt-2 pl-2">Site single page</p>
+                    </div>
+                    <div class="col-3">
+                        <img width="65%" src="./public/img/carte-visite.png" alt="">
+                        <p class="pt-2 pl-3">Carte de visite</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="container footer-text pt-5 text-white">
+            <div class="row">
+                <div class="col-4 d-flex flex-column">
+                    <div class="col-2">
+                        <p>Packs</p>
+                    </div>
+                    <div class="col-10 d-flex">
+                        <img class="w-10 h-25 pl-3" src="./public/img/icon-eclosion.png" alt="">
+                        <img class="w-10 h-25 pl-3" src="./public/img/icon-evolution.png" alt="">
+                        <img class="w-10 h-25 pl-3" src="./public/img/icon-envole.png" alt="">
+                    </div>
+                </div>
+                <div class="col-4 d-flex flex-column ">
+                    <div class="col-2">
+                        <p>Outils</p>
+                    </div>
+                    <div class="col-10 d-flex">
+                        <img class="w-10 h-25  pl-3" src="./public/img/identite-graphique.png" alt="">
+                        <img class="w-10 h-25  pl-3" src="./public/img/reseaux-sociaux.png" alt="">
+                        <img class="w-10 h-25  pl-3" src="./public/img/print.png" alt="">
+                    </div>
+                </div>
+                <div class="col-4 pl-5 d-flex   flex-column">
+                    <div class="col-2 d-flex">
+                        <p>Social media</p>
+                    </div>
+                    <div class="col-10 d-flex">
+                        <img class="w-10 h-25 pl-3" src="./public/img/social-f.png" alt="">
+                        <img class="w-10 h-25 pl-3" src="./public/img/google-plus.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="col d-flex justify-content-end">
+                <p>C.G.V.</p>
+            </div>
+        </div>
+    </footer>
     <!-- jquery -->
     <script src="./node_modules/jquery/dist/jquery.js"></script>
     <!-- bootstrap -->
