--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="./public/css/app.css">
 </head>
 
-<body>
-    <div class="container d-flex justify-content-around align-items-center  text-white  p-0">
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-dark   static-top ">
-                <a class="navbar-bran pr-5 " href="#">
+<body class="shadow mb-5 bg-white rounded container-md p-0">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark   static-top ">
+            <div class="container-md d-flex justify-content-around align-items-center  text-white ">
+                <a class="navbar-brand pr-5 " href="#">
                     <img class="h-50 w-50" src="./public/img/logo-horizontal-fond-noir-couleur.png" width="200"
                         height="50" alt="">
                 </a>
@@ -21,8 +21,7 @@
                     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collaps d-flex align-items-center  justify-content-center"
-                    id="navbarResponsive">
+                <div class="collapse navbar-collapse nav-liste" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto menu">
                         <li class="nav-item active pl-3 ">
                             <img class="h-30 " src="./public/img/home-icon.png" alt="">
@@ -52,62 +51,80 @@
                         </li>
                     </ul>
                 </div>
-            </nav>
-        </header>
-    </div>
+            </div>
+        </nav>
+
+    </header>
     <main>
         <section>
-            <div class="container  p-0 pt-4 pl-5 pb-4  text-white eclosion ">
-                <div class="row">
-                    <div class="col-6 pl-4">
-                        <img src="./public/img/packages.png" alt="">
-                    </div>
-                    <div class="col-6 ">
-                        <h1 class="text ">A chaque étape son pack</h1>
-                        <p>naître, grandir et prospérer.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section>
-            <div class="container texte1 pt-4">
-                <div class="col  pl-4 eclosion-text  w-25">
-                    <h1>Eclosion</h1>
-                </div>
-                <div class="row">
-                    <div class="col-6 pt-5 pl-5 ">
-                        <img src="./public/img/icon-eclosion.png" alt="">
-                    </div>
-                    <div class="col-6">
-                        <div class="col-6 pt-5 ">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicingendis eum! Repellendus, enim impedit,
-                                cumque deserunt earum sunt veritatis, voluptatibus illum ab repellat fugiat eaque.</p>
+            <div class="container-md bg-secondary ">
+                <div class="card mb-3 border-0 bg-secondary text-white" style="max-width: 100%; ">
+                    <div class="row no-gutters">
+                        <div class="col-md-4  text-center  ">
+                            <img class="img-fluid" src="./public/img/packages.png" alt="">
+                        </div>
+                        <div class="col-md-8 ">
+                            <div class="card-body text-white">
+                                <h1 class="card-title">A chaque étape son pack</h1>
+                                <p class="card-text">naître, grandir et prospérer</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <section>
-            <div class="container pt-5 logo">
-                <div class="row">
-                    <div class="col-3  ">
-                        <img class="w-75 pl-5"  src="./public/img/Logo-logo.png" alt="">
-                        <p  class=" pt-3 pl-5">Logo</p>
-                    </div>
-                    <div class="col-3">
-                        <img class="w-75 pl-5" src="./public/img/icon-charte-graphic.png" alt="">
-                        <p class=" pt-3 pl-4">Charte graphique</p>
-                    </div>
-                    <div class="col-3 pl-5">
-                        <img class="w-75 pl-4" src="./public/img/site-single-page.png" alt="">
-                        <p class=" pt-3 pl-1">Site single page</p>
-                    </div>
-                    <div class="col-3">
-                        <img class="w-75 pl-5" src="./public/img/carte-visite.png" alt="">
-                        <p class=" pt-3 pl-5">Carte de visite</p>
+            <div class="container-md texte1 pt-4">
+                <div class="col  pl-4 evolution-text  ">
+                    <h1>Eclosion</h1>
+                </div>
+                <div class="container ">
+                    <div class="card mb-3 border-0 " style="max-width: 100%; ">
+                        <div class="row no-gutters">
+                            <div class="col-md-4  text-center  ">
+                                <img class="img-fluid" src="./public/img/icon-eclosion.png" alt="">
+                            </div>
+                            <div class="col-md-8 ">
+                                <div class="card-body">
+                                    <p class="card-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicingendis eum!
+                                        Repellendus, enim impedit,
+                                        cumque deserunt earum sunt veritatis, voluptatibus illum ab repellat fugiat
+                                        eaque.</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="bg-dark">
+            <div class="w-75 mx-auto d-flex  align-items-center py-4 mt-5">
+                <div class="card border-0 bg-dark " style="width: 18rem;">
+                    <img src="./public/img/Logo-logo.png" class="img-fluid" width="90px" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Logo</p>
+                    </div>
+                </div>
+                <div class="card border-0 bg-dark " style="width: 18rem;">
+                    <img src="./public/img/icon-charte-graphic.png" class="img-fluid" width="90px" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Charte graphique</p>
+                    </div>
+                </div>
+                <div class="card border-0 bg-dark " style="width: 18rem;">
+                    <img src="./public/img/site-single-page.png" class="img-fluid" width="90px" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Site single page</p>
+                    </div>
+                </div>
+                <div class="card border-0 bg-dark " style="width: 18rem;">
+                    <img src="./public/img/site-single-page.png" class="img-fluid" width="90px" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Carte de visite</p>
+                    </div>
+                </div>
+            </div>
             </div>
         </section>
         <section>
@@ -115,60 +132,85 @@
                 <div class="col  pl-4 evolution-text ">
                     <h1>Evolution</h1>
                 </div>
-                <div class="row">
-                    <div class="col-6 pt-5 pl-5 ">
-                        <img src="./public/img/icon-evolution.png" alt="">
-                    </div>
-                    <div class="col-6">
-                        <div class="col-6 pt-5 ">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicingendis eum! Repellendus, enim impedit,
-                                cumque deserunt earum sunt veritatis, voluptatibus illum ab repellat fugiat eaque.</p>
+            </div>
+            <div class="container ">
+                <div class="card mb-3 border-0 " style="max-width: 100%; ">
+                    <div class="row no-gutters">
+                        <div class="col-md-4  text-center  ">
+                            <img class="img-fluid" src="./public/img/icon-evolution.png" alt="">
+                        </div>
+                        <div class="col-md-8 ">
+                            <div class="card-body">
+                                <p class="card-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicingendis eum!
+                                    Repellendus, enim impedit,
+                                    cumque deserunt earum sunt veritatis, voluptatibus illum ab repellat fugiat
+                                    eaque.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+            </div>
         </section>
-        <section>
-            <div class="container logo p-5">
-                <div class="row">
-                    <div class="col-3">
-                        <img width="65%" src="./public/img/Logo-logo.png" alt="">
-                        <p class=" pt-2 pl-3">Logo</p>
-                    </div>
-                    <div class="col-3">
-                        <img width="65%" src="./public/img/icon-charte-graphic.png" alt="">
-                        <p class="pt-2 pl-2">Charte graphique</p>
-                    </div>
-                    <div class="col-3">
-                        <img width="65%" src="./public/img/site-single-page.png" alt="">
-                        <p class="pt-2 pl-1">Site single page</p>
-                    </div>
-                    <div class="col-3">
-                        <img width="65%" src="./public/img/carte-visite.png" alt="">
-                        <p class="pt-2 pl-3">Carte de visite</p>
+        <section class="bg-dark">
+            <div class="w-75 mx-auto d-flex  align-items-center py-4 mt-5">
+                <div class="card border-0 bg-dark border-0 d-flex align-items-cente " style="width: 18rem;">
+                    <img src="./public/img/Logo-logo.png" class="img-fluid" width="90px" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Logo</p>
                     </div>
                 </div>
-                <div class="col d-flex justify-content-center align-items-center flex-column ">
-                    <img width="15%" src="./public/img/reseaux-sociaux.png" alt="">
-                    <p class="pt-2 pl-3">Réseaux sociaux</p>
+                <div class="card border-0 bg-dark  border-0 d-flex align-items-cente" style="width: 18rem;">
+                    <img src="./public/img/icon-charte-graphic.png" class="img-fluid" width="90px" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Charte-graphique</p>
+                    </div>
+                </div>
+                <div class="card border-0 bg-dark border-0 d-flex align-items-cente " style="width: 18rem;">
+                    <img src="./public/img/site-single-page.png"" class=" img-fluid" width="90px" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Sinfle page</p>
+                    </div>
+                </div>
+                <div class="card border-0 bg-dark border-0 d-flex align-items-cente " style="width: 18rem;">
+                    <img src="./public/img/carte-visite.png" class="img-fluid" width="90px" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Carte de visite</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row w-75 mx-auto justify-content-center">
+                <div class="card border-0 d-flex align-items-center col-3 bg-dark " style="width: 18rem;">
+                    <img src="./public/img/reseaux-sociaux.png" class="img-fluid" width="90px" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">reseaux-sociaux</p>
+                    </div>
                 </div>
             </div>
+
         </section>
         <section>
             <div class="container texte1  pt-4">
                 <div class="col  pl-4 envol-text " width="">
                     <h1>Envol</h1>
                 </div>
-                <div class="row">
-                    <div class="col-6 pt-5 pl-5 ">
-                        <img src="./public/img/icon-envole.png" alt="">
-                    </div>
-                    <div class="col-6">
-                        <div class="col-6 pt-5 ">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicingendis eum! Repellendus, enim impedit,
-                                cumque deserunt earum sunt veritatis, voluptatibus illum ab repellat fugiat eaque.</p>
+                <div class="container ">
+                    <div class="card mb-3 border-0 " style="max-width: 100%; ">
+                        <div class="row no-gutters">
+                            <div class="col-md-4  text-center  ">
+                                <img class="img-fluid" src="./public/img/icon-envole.png" alt="">
+                            </div>
+                            <div class="col-md-8 ">
+                                <div class="card-body">
+                                    <p class="card-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicingendis eum!
+                                        Repellendus, enim impedit,
+                                        cumque deserunt earum sunt veritatis, voluptatibus illum ab repellat fugiat
+                                        eaque.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -198,39 +240,33 @@
         </section>
     </main>
     <footer>
-        <div class="container footer-text pt-5 text-white">
+        <div class="container bg-primary text-white">
             <div class="row">
-                <div class="col-4 d-flex flex-column">
-                    <div class="col-2">
-                        <p>Packs</p>
-                    </div>
-                    <div class="col-10 d-flex">
-                        <img class="w-10 h-25 pl-3" src="./public/img/icon-eclosion.png" alt="">
-                        <img class="w-10 h-25 pl-3" src="./public/img/icon-evolution.png" alt="">
-                        <img class="w-10 h-25 pl-3" src="./public/img/icon-envole.png" alt="">
+                <div class="col-sm-4 text-sm-left text-center">
+                    <p>Packs</p>
+                    <div>
+                        <img class="img-fluid" width="60px" src="./public/img/icon-eclosion.png" alt="">
+                        <img class="img-fluid" width="60px" src="./public/img/icon-evolution.png" alt="">
+                        <img class="img-fluid" width="60px" src="./public/img/icon-envole.png" alt="">
                     </div>
                 </div>
-                <div class="col-4 d-flex flex-column ">
-                    <div class="col-2">
-                        <p>Outils</p>
-                    </div>
-                    <div class="col-10 d-flex">
-                        <img class="w-10 h-25  pl-3" src="./public/img/identite-graphique.png" alt="">
-                        <img class="w-10 h-25  pl-3" src="./public/img/reseaux-sociaux.png" alt="">
-                        <img class="w-10 h-25  pl-3" src="./public/img/print.png" alt="">
+                <div class="col-sm-4  text-sm-left text-center">
+                    <p>Outils</p>
+                    <div>
+                        <img class="img-fluid" width="60px" src="./public/img/identite-graphique.png" alt="">
+                        <img class="img-fluid" width="60px" src="./public/img/reseaux-sociaux.png" alt="">
+                        <img class="img-fluid" width="60px" src="./public/img/print.png" alt="">
                     </div>
                 </div>
-                <div class="col-4 pl-5 d-flex   flex-column">
-                    <div class="col-2 d-flex">
-                        <p>Social media</p>
-                    </div>
-                    <div class="col-10 d-flex">
-                        <img class="w-10 h-25 pl-3" src="./public/img/social-f.png" alt="">
-                        <img class="w-10 h-25 pl-3" src="./public/img/google-plus.png" alt="">
+                <div class="col-sm-4  text-sm-left text-center">
+                    <p>Social media</p>
+                    <div>
+                        <img class="img-fluid" width="60px" src="./public/img/social-f.png" alt="">
+                        <img class="img-fluid" width="60px" src="./public/img/google-plus.png" alt="">
                     </div>
                 </div>
             </div>
-            <div class="col d-flex justify-content-end">
+            <div class=" col-sm text-sm-right text-center ">
                 <p>C.G.V.</p>
             </div>
         </div>
