--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="card mb-3 border-0 " style="max-width: 100%; ">
                         <div class="row no-gutters">
                             <div class="col-md-4  text-center  ">
-                                <img class="img-fluid" src="./public/img/icon-eclosion.png" alt="">
+                                <img class="img-fluid pt-3" src="./public/img/icon-eclosion.png" alt="">
                             </div>
                             <div class="col-md-8 ">
                                 <div class="card-body">
@@ -99,27 +99,27 @@
             </div>
         </section>
         <section class="bg-dark">
-            <div class="w-75 mx-auto d-flex  align-items-center py-4 mt-5">
+            <div class="w-75 mx-auto d-flex flex-column flex-sm-column flex-md-row text-center justify-content-center align-items-center py-4 mt-5">
                 <div class="card border-0 bg-dark " style="width: 18rem;">
-                    <img src="./public/img/Logo-logo.png" class="img-fluid" width="90px" alt="...">
+                    <img src="./public/img/Logo-logo.png" class="img-fluid mx-auto" width="90px" alt="...">
                     <div class="card-body">
                         <p class="card-text">Logo</p>
                     </div>
                 </div>
                 <div class="card border-0 bg-dark " style="width: 18rem;">
-                    <img src="./public/img/icon-charte-graphic.png" class="img-fluid" width="90px" alt="...">
+                    <img src="./public/img/icon-charte-graphic.png" class="img-fluid mx-auto" width="90px" alt="...">
                     <div class="card-body">
                         <p class="card-text">Charte graphique</p>
                     </div>
                 </div>
                 <div class="card border-0 bg-dark " style="width: 18rem;">
-                    <img src="./public/img/site-single-page.png" class="img-fluid" width="90px" alt="...">
+                    <img src="./public/img/site-single-page.png" class="img-fluid mx-auto" width="90px" alt="...">
                     <div class="card-body">
                         <p class="card-text">Site single page</p>
                     </div>
                 </div>
                 <div class="card border-0 bg-dark " style="width: 18rem;">
-                    <img src="./public/img/site-single-page.png" class="img-fluid" width="90px" alt="...">
+                    <img src="./public/img/site-single-page.png" class="img-fluid mx-auto" width="90px" alt="...">
                     <div class="card-body">
                         <p class="card-text">Carte de visite</p>
                     </div>
@@ -137,7 +137,7 @@
                 <div class="card mb-3 border-0 " style="max-width: 100%; ">
                     <div class="row no-gutters">
                         <div class="col-md-4  text-center  ">
-                            <img class="img-fluid" src="./public/img/icon-evolution.png" alt="">
+                            <img class="img-fluid pt-3" src="./public/img/icon-evolution.png" alt="">
                         </div>
                         <div class="col-md-8 ">
                             <div class="card-body">
@@ -153,27 +153,27 @@
             </div>
             </div>
         </section>
-        <section class="bg-dark">
-            <div class="w-75 mx-auto d-flex  align-items-center py-4 mt-5">
-                <div class="card border-0 bg-dark border-0 d-flex align-items-cente " style="width: 18rem;">
+        <section class="bg-dark  ">
+            <div class="w-75 mx-auto d-flex flex-column flex-sm-column flex-md-row align-items-center py-4 mt-5">
+                <div class="card border-0 bg-dark border-0 d-flex align-items-center  " style="width: 18rem;">
                     <img src="./public/img/Logo-logo.png" class="img-fluid" width="90px" alt="...">
                     <div class="card-body">
                         <p class="card-text">Logo</p>
                     </div>
                 </div>
-                <div class="card border-0 bg-dark  border-0 d-flex align-items-cente" style="width: 18rem;">
+                <div class=" card border-0 bg-dark  border-0 d-flex align-items-center " style="width: 18rem;">
                     <img src="./public/img/icon-charte-graphic.png" class="img-fluid" width="90px" alt="...">
                     <div class="card-body">
                         <p class="card-text">Charte-graphique</p>
                     </div>
                 </div>
-                <div class="card border-0 bg-dark border-0 d-flex align-items-cente " style="width: 18rem;">
-                    <img src="./public/img/site-single-page.png"" class=" img-fluid" width="90px" alt="...">
+                <div class=" card border-0 bg-dark border-0 d-flex align-items-center " style="width: 18rem;">
+                    <img src="./public/img/site-single-page.png" class=" img-fluid" width="90px" alt="...">
                     <div class="card-body">
                         <p class="card-text">Sinfle page</p>
                     </div>
                 </div>
-                <div class="card border-0 bg-dark border-0 d-flex align-items-cente " style="width: 18rem;">
+                <div class="   card border-0 bg-dark border-0  d-flex align-items-center " style="width: 18rem;">
                     <img src="./public/img/carte-visite.png" class="img-fluid" width="90px" alt="...">
                     <div class="card-body">
                         <p class="card-text">Carte de visite</p>
@@ -200,7 +200,7 @@
                     <div class="card mb-3 border-0 " style="max-width: 100%; ">
                         <div class="row no-gutters">
                             <div class="col-md-4  text-center  ">
-                                <img class="img-fluid" src="./public/img/icon-envole.png" alt="">
+                                <img class="img-fluid pt-3" src="./public/img/icon-envole.png" alt="">
                             </div>
                             <div class="col-md-8 ">
                                 <div class="card-body">
@@ -217,25 +217,32 @@
             </div>
         </section>
         <section>
-            <div class="container logo p-5">
-                <div class="row">
-                    <div class="col-3 ">
-                        <img width="65%" src="./public/img/Logo-logo.png" alt="">
-                        <p class="pt-2 pl-3">Logo</p>
+            <div class="container-md bg-dark ">
+                <div class="w-75 mx-auto d-flex  d-flex flex-column flex-sm-column flex-md-row align-items-center py-4 mt-5">
+                    <div class="card border-0 bg-dark border-0 d-flex align-items-center justify-content-center"  style="width: 18rem;">
+                        <img src="./public/img/Logo-logo.png" class="img-fluid" width="90px" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Logo</p>
+                        </div>
                     </div>
-                    <div class="col-3">
-                        <img width="65%" src="./public/img/icon-charte-graphic.png" alt="">
-                        <p class="pt-2 pl-2">Charte graphique</p>
+                    <div class=" card border-0 bg-dark  border-0 d-flex align-items-center justify-content-center" style="width: 18rem;">
+                        <img src="./public/img/icon-charte-graphic.png" class="img-fluid" width="90px" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Charte-graphique</p>
+                        </div>
                     </div>
-                    <div class="col-3">
-                        <img width="65%" src="./public/img/site-single-page.png" alt="">
-                        <p class="pt-2 pl-2">Site single page</p>
+                    <div class="card border-0 bg-dark border-0 d-flex align-items-center justify-content-center " style="width: 18rem;">
+                        <img src="./public/img/site-single-page.png" class=" img-fluid" width="90px" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Sinfle page</p>
+                        </div>
                     </div>
-                    <div class="col-3">
-                        <img width="65%" src="./public/img/carte-visite.png" alt="">
-                        <p class="pt-2 pl-3">Carte de visite</p>
+                    <div class="card border-0 bg-dark border-0  d-flex align-items-center " style="width: 18rem;">
+                        <img src="./public/img/carte-visite.png" class="img-fluid" width="90px" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Carte de visite</p>
+                        </div>
                     </div>
-                </div>
             </div>
         </section>
     </main>
